force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndDate__c</fullName>
    <description>The Expected end date of the subscription or service</description>
    <inlineHelpText>The Expected end date of the subscription or service</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>