force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__HasValidationErrors__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasValidationErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there are validation errors associated with the po item</description>
    <inlineHelpText>Indicates whether there are validation errors associated with the po item</inlineHelpText>
    <label>Validation Errors ?</label>
    <type>Checkbox</type>
</CustomField>