force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RequestedDeliveryDate__c</fullName>
    <description>The date requested to deliver products and services referred to in the purchase order item</description>
    <inlineHelpText>The date requested to deliver products and services referred to in the purchase order item</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>