force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ShiptoName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShiptoName__c</fullName>
    <description>The Ship To Account name as received from external system</description>
    <inlineHelpText>The Ship To Account name as received from external system</inlineHelpText>
    <label>Ship to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>